// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute should return error when ripcord true 1`] = `
{
  "error": {
    "errorResponse": {
      "ripcord": true,
      "ripcordDetails": [
        "Integrations",
        "Balances",
      ],
    },
    "feedID": "{"data":{"chain":"AVA","resultPath":"totalTrust","endpoint":"trueusd"}}",
    "message": "Ripcord indicator true. Details: Integrations, Balances",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 502,
}
`;

exports[`execute should return success for token 1`] = `
{
  "data": {
    "result": 3097573780.109635,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3097573780.109635,
  "statusCode": 200,
}
`;

exports[`execute should return success for trust 1`] = `
{
  "data": {
    "result": 3117410009.89,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3117410009.89,
  "statusCode": 200,
}
`;

exports[`execute should return success when given a chain 1`] = `
{
  "data": {
    "result": 24268.83,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 24268.83,
  "statusCode": 200,
}
`;

exports[`execute should return success when given a chain and resultPath 1`] = `
{
  "data": {
    "result": 3005274.95,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3005274.95,
  "statusCode": 200,
}
`;
